<resources>
    <string name="app_name">Quisiin</string>
    <string name="title_home">Home</string>
    <string name="title_quiz">Quiz List</string>
    <string name="title_profile">Profile</string>
    <string name="welcome_hello">Hello!</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="welcome_subtitle">Welcome to the Quiz App! Here you can find a variety of quizzes to test your knowledge and have fun. Click the button below to get started!</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="new_here">New here?</string>
    <string name="create_an_account">Create an account</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hint_age">Age</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_quiz_history">My Quiz History</string>
    <string name="total_point">Total Points</string>
    <string name="quiz_title">Quiz Title</string>
    <string name="description">Description</string>
    <string name="review">Review</string>
    <string name="get_rewards">Get Rewards</string>
    <string name="recommended_quizzes">Recommended Quizzes</string>
    <string name="start">Start</string>
    <string name="view">View</string>
    <string name="get_started">Get Started</string>
    <string name="my_question">My Question</string>
    <string name="create_subtitle">Create your next Question and use the insights to make better decicions</string>
    <string name="create_title">Have a Question That Comes to Mind?</string>
    <string name="personal_information">Personal Information</string>
    <string name="name">Name</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_location">Location</string>
    <string name="hint_work">Work</string>
    <string name="hint_hobby">Hobby</string>
    <string name="save_changes">Save Changes</string>
    <string name="cancel">Cancel</string>
    <string name="create_quiz_title">Fill Your Details Quiz</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="input_url">Input From URL</string>
    <string name="your_url">Your URL</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="title">Title</string>
    <string name="choose">Choose</string>
    <string name="hint_Kategori">Kategori</string>
    <string-array name="title_quiz">
        <item>Pengaruh Cedera Terhapap Atlet</item>
        <item>Klasifikasi Padi Sehat</item>
        <item>Minat Mahasiswa Terhadap Jurusan</item>
    </string-array>
    <string-array name="description_quiz">
        <item>Kuesioner singkat ini bertujuan untuk mengeksplorasi dampak cedera terhadap performa dan kesejahteraan atlet.</item>
        <item>Kuesioner ini bertujuan untuk mengklasifikasikan jenis padi yang sehat berdasarkan berbagai faktor penilaian yang relevan.</item>
        <item>Kuesioner ini bertujuan untuk mengukur minat mahasiswa terhadap jurusan yang ditawarkan.</item>
    </string-array>
</resources>